--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #1020cd;">AMAL KP</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Web Designer, Seo analytics, Poster Designer, google adds, Sociel media,</div>
+                    <div class="typed-text d-none">Web Designer, Seo analytics, Poster Designer, google ads, Social media,</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="img/sample cv amal.jpg" class="btn btn-outline-light mr-5">Download CV</a>
                         <!-- <button type="button" class="btn-play" data-toggle="modal"
@@ -92,14 +92,14 @@
                         </button>
                         <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5> -->
                     </div>
-                </div>
+                </div>          
             </div>
         </div>
     </div>
     <!-- Header End -->
 
 
-    <!-- About Start -->
+    <!-- About Start -->    
     <div class="container-fluid py-5" id="about">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
