--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="https://www.infonlive.com/ernakulam/north-paravur/9587/new-life-acupuncture-center" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -38,7 +38,7 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#qualification" class="nav-item nav-link">EXPERICENCE</a>
+                <a href="#qualification" class="nav-item nav-link">Expericence</a>
                 <a href="#skill" class="nav-item nav-link">Skill</a>
                 <a href="#service" class="nav-item nav-link">Service</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
@@ -321,7 +321,7 @@
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
                 <h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
-            </div>
+            <!--
             <div class="row">
                 <div class="col-12 text-center mb-2">
                     <ul class="list-inline mb-4" id="portfolio-flters">
@@ -330,7 +330,7 @@
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Development</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Marketing</li>
                     </ul>
-                </div>
+                </div> -->
             </div>
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
@@ -366,9 +366,35 @@
                         </div> -->
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <a href="https://www.infonlive.com/ernakulam/alangad/9349/style-letters" target="_blank">
+                        <img class="img-fluid rounded w-100" src="img/2 Bedroom.jpg" alt=""></a>
+                        <!-- <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio-2.jpg" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div> -->
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <a href="https://www.infonlive.com/ernakulam/kothamangalam/9533/loran's-gents-beauty-parlour-&-makeup-studio">
+                         <video width="400" height="350" controls autoplay loop muted>
+                            <source src="img/LORAN'S GENTS BEAUTY PARLOUR & MAKEUP STUDIO.mp4" type="video/mp4">
+                         </video>   
+                        </a>
+                        <!-- <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div> -->
+                    </div>
+                </div>
+
             </div>
+
         </div>
     </div>
     <!-- Portfolio End -->
