--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8"Marketer>
-    <title>Freelance Digital marketing kannur </title>
+    <title>best digital marketing freelance kannur</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Free HTML Templates" name="best digital marketing freelance kannur|digital marketing near|kannur top digital Marketing freelance| ">
+    <meta content="Free HTML Templates" name="i am amal kp from kannur best digital marketing service .SEO,SEM,PPC,SMM, canva design,photoshop,web design,content creating,">
     <!-- Favicon -->
     <link href="img/favicon1.png" rel="icon">
 
@@ -85,7 +85,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Web Designer, Seo analytics, Poster Designer, google ads, Social media,</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="img/sample cv amal.jpg" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="img/2.jpg" class="btn btn-outline-light mr-5">Download CV</a>
                         <!-- <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://youtu.be/ZKSRnDH8-lw?si=Fcw1GsUhxtdnBtH9" data-target="#videoModal">
                             <span></span>
@@ -369,7 +369,7 @@
 
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
-                        <a href="https://www.infonlive.com/ernakulam/alangad/9349/style-letters" target="_blank">
+                        <a href="https://fillcolours.com/`" target="_blank">
                         <img class="img-fluid rounded w-100" src="img/2 Bedroom.jpg" alt=""></a>
                         <!-- <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="img/portfolio-2.jpg" data-lightbox="portfolio">
@@ -392,9 +392,64 @@
                         </div> -->
                     </div>
                 </div>
-
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <a href="https://www.infonlive.com/ernakulam/north-paravur/9613/tiny-teeth-dental-clinic">
+                        <img class="img-fluid rounded w-100" src="img/123.jpg" alt=""></a>
+                        <!-- <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <a href="https://www.infonlive.com/ernakulam/aluva/4825/thathry-beauty-clinic">
+                         <video width="400" height="350" controls autoplay loop muted>
+                            <source src="img/MAKE.mp4" type="video/mp4">
+                         </video>   
+                        </a>
+                        <!-- <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div> -->
+                    </div>
+                </div>
+            <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                <div class="position-relative overflow-hidden mb-2">
+                    <a href="https://protechub.com/">
+                    <img class="img-fluid rounded w-100" src="img/protech.jpg" alt=""></a>
+                    <!-- <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                        <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                            <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                        </a>
+                    </div> -->
+                </div>
             </div>
-
+            <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                <div class="position-relative overflow-hidden mb-2">
+                    <a href="https://www.infonlive.com/kozhikode/east-hill/9689/dwiti-speciality-dental-clinic">
+                    <img class="img-fluid rounded w-100" src="img/Dwiti.jpg" alt=""></a>
+                    <!-- <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                        <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                            <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                        </a>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                <div class="position-relative overflow-hidden mb-2">
+                    <a href="https://www.infonlive.com/thrissur/triprayar/9564/grand-beauty-salon">
+                    <img class="img-fluid rounded w-100" src="img/WhatsApp Image 2025-01-13 at 11.43.29_6c4ed334.jpg" alt=""></a>
+                    <!-- <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                        <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                            <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                        </a>
+                    </div> -->
+                </div>
+            </div>
         </div>
     </div>
     <!-- Portfolio End -->
@@ -543,7 +598,7 @@
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="https://www.instagram.com/classmate1288/"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-light btn-social" href=""><i class="fab fa-instagram"></i></a>
             </div>
             <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#">Privacy</a>
